--- a/config/database.yml
+++ b/config/database.yml
@@ -2,6 +2,10 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: localhost
+  database: employeedb_development
+  username: employee_postgres
+  password: 12345Empl0yee!
 
 development:
   <<: *default
@@ -14,3 +18,7 @@ production:
   database: <%= ENV['DB_DATABASE'] %>
   username: <%= ENV['DB_USERNAME'] %>
   password: <%= ENV['DB_PASSWORD'] %>
+
+test:
+  <<: *default
+  database: employeedb_development
