--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,8 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   host: localhost
   database: employeedb_development
-  username: employee_postgres
-  password: 12345Empl0yee!
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
 
 development:
   <<: *default
